# sroc

./: CMakeLists.txt  README  libsroc.pc.in
cmake/: AddSrocTest.cmake
examples/: CMakeLists.txt  simple.c  simple.conf
include/: sroc.h
src/: parse_helper.c  parse_helper.h  sroc.c  string_helper.c  string_helper.h  util.c  util.h
tests/: CMakeLists.txt  test-creation.c  test-string-util.c  test-test.c  test_creation.c  test_string_helper.c
